--- a/index.css
+++ b/index.css
@@ -6,11 +6,19 @@ body {
     cursor: pointer;
 }
 
-h1 {
+body {
     color: rgb(52, 73, 94);
-    transition: color 0.5s ease-in-out;
 }
 
 .clicked {
     color: #7f8c8d;
 }
+
+.form,
+.greeting {
+    display: none;
+}
+
+.showing {
+    display: block;
+} 
