--- a/index.css
+++ b/index.css
@@ -1,13 +1,10 @@
 body {
     background-color: #0a3d62;
+    color: #1e272e;
 }
 
 .btn {
     cursor: pointer;
-}
-
-body {
-    color: rgb(52, 73, 94);
 }
 
 .clicked {
