--- a/index.css
+++ b/index.css
@@ -1,6 +1,8 @@
 body {
+    font-family: monospace;
     background-color: #0a3d62;
-    color: #1e272e;
+    color: #f2f2f2;
+    margin: 0;
 }
 
 .btn {
@@ -36,4 +38,72 @@ body {
     height: 100%; 
     z-index: -1;
     animation: fadeIn 0.5s linear;
+}
+
+.header {
+    margin: 10px 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    justify-content: flex-end;
+    font-family: "Noto Sans KR", sans-serif;
+    font-weight: 500;
+}
+
+.weather {
+    float: right;
+    margin-top: 5px;
+    margin-right: 5px;
+}
+
+.main {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    left: 0;
+    right: 0;
+    margin: auto 0;
+    top: 150px;
+}
+
+.clock {
+    font-size: 50px;
+}
+
+.greetings {
+    font-weight: 500;
+    font-size: 30px;
+    margin: 5px 0 15px 0;
+    text-shadow: none;
+}
+
+.js-toDoList {
+    list-style: none;
+    padding-left: 0px;
+}
+
+.js-toDoList button {
+    border: none;
+    background-color: rgba(255, 255, 255, 0);
+    cursor: pointer;
+}
+
+.js-toDoList li {
+    font-family: 'Noto Sans KR';
+    font-weight: 500;
+    font-size: 18px;
+}
+
+.js-form input,
+.js-toDoForm input {
+    padding: 5px 15px;
+    border: 3px solid #d4d4d4;
+    border-radius: 20px;
+    font-family: "Noto Sans KR", sans-serif;
+    font-weight: 400;
+    font-size: 15px;
+    color: #3a3a3a;
+    box-shadow: 6px 6px 0px rgba(0, 0, 0, 0.2);
 }
